contact section added

--- a/index.html
+++ b/index.html
@@ -143,6 +143,17 @@
             Sorry, your browser does not support inline SVG.
           </svg>
         </div>
+        <p class="projects-section__paragraph">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
+          tempora, omnis modi reiciendis delectus nobis maxime quam consequatur
+          quo, aliquid harum ipsum praesentium exercitationem qui consectetur at
+          earum! Sint, repellendus! Sunt assumenda non.
+        </p>
+      </section>
+      <section class="contact-section">
+        <h2 class="contact-section__heading">
+          Want to hire me? Click here to get in touch!
+        </h2>
       </section>
     </main>
   </body>
