--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="styles/utilities.css" />
     <link rel="stylesheet" href="styles/animations.css" />
+    <link rel="stylesheet" href="styles/transformations.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Marvin Fretter - Design and Development</title>
   </head>
@@ -77,6 +78,10 @@
           alt="Me, working on a project with my laptop."
           loading="lazy"
         />
+        <img class="projects-section__phone rotate-clockwise-45-degree" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone" src="img/Smartphone.png"></img>
         <h2 class="projects-section__heading">Projects</h2>
         <p class="projects-section__paragraph">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
@@ -87,7 +92,7 @@
           obcaecati hic. Suscipit aliquid quia nihil animi. Placeat, eos!
         </p>
         <div class="project_section__showcase">
-          <svg class="project-section__left-arrow" height="40" width="75">
+          <svg class="project-section__left-arrow translate-x-minus-75-px" height="40" width="75">
             <line
               x1="25"
               y1="5"
@@ -123,7 +128,7 @@
            
           </div>
           </div>
-          <svg class="project-section__right-arrow" height="40" width="75">
+          <svg class="project-section__right-arrow translate-x-plus-75-px" height="40" width="75">
             <line
               x1="50"
               y1="5"
