--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/utilities.css" />
     <link rel="stylesheet" href="styles/animations.css" />
-    <link rel="stylesheet" href="styles/transformations.css" />
+    <link rel="stylesheet" href="styles/transformations-and-filters.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Marvin Fretter - Design and Development</title>
   </head>
@@ -74,14 +74,16 @@
       <section class="projects-section">
         <img
           class="projects-section__header-img"
-          src="img/projects.png"
+          src="img/mockup-collection.png"
           alt="Me, working on a project with my laptop."
           loading="lazy"
         />
-        <img class="projects-section__phone rotate-clockwise-45-degree" src="img/Smartphone.png"></img>
-        <img class="projects-section__phone" src="img/Smartphone.png"></img>
-        <img class="projects-section__phone" src="img/Smartphone.png"></img>
-        <img class="projects-section__phone" src="img/Smartphone.png"></img>
+        <div class="projects-section__phones translate-x-minus-50-px">
+        <img class="projects-section__phone rotate-clockwise-15-degree rotate-origin-bottom-left blur-3" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone rotate-clockwise-30-degree rotate-origin-bottom-left blur-2" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone rotate-clockwise-45-degree rotate-origin-bottom-left blur-1" src="img/Smartphone.png"></img>
+        <img class="projects-section__phone rotate-clockwise-60-degree rotate-origin-bottom-left " src="img/Smartphone.png"></img>
+        </div>
         <h2 class="projects-section__heading">Projects</h2>
         <p class="projects-section__paragraph">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
