--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         src="img/head3.png"
         alt="electric devices lying on a table"
       />
+      <img
+        class="bicycle translate-x-plus-50-px"
+        src="img/rad.png"
+        alt="A bicycle, because i like to ride it."
+      />
       <div class="hero__text-wrapper">
         <span class="text-wrapper__name">Marvin Fretter</span>
         <h1 class="text-wrapper__heading">Design & <br />Development</h1>
@@ -51,6 +56,11 @@
           enim voluptates excepturi animi molestiae consequuntur suscipit
           eligendi dicta itaque, hic iste reprehenderit. Voluptatum, molestias
           nisi?
+          <!-- <img
+          class="radio translate-x-minus-75-px""
+          src="img/radio.png"
+          alt="A radio, because i'm a musican, too."
+        /> -->
         </p>
         <p class="about-section__paragraph">
           <img
