--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
         src="img/rad.png"
         alt="A bicycle, because i like to ride it."
       /> -->
-      <img
-        class="coffe-bean"
-        src="img/cropped-bean.png"
-        alt="A floating coffe bean because i like coffe a lot."
-      />
+     <div class="hero__img-wrapper">
+       <img src="img/illu/iPad_png.png" alt="" class="img-wrapper__left-img"></img>
+       <img src="img/illu/Laptop_png.png" alt="" class="img-wrapper__right-img">
+     </div>
       <div class="hero__text-wrapper">
         <span class="text-wrapper__name">Marvin Fretter</span>
         <h1 class="text-wrapper__heading">Design & <br />Development</h1>
       </div>
+       <img
+        class="coffe-bean"
+        src="img/cropped-bean.png"
+        alt="A floating coffe bean because i like coffe a lot."
+      />
     </header>
     <main>
       
@@ -228,7 +232,6 @@
 
 <script src="scripts/modal.js" async></script>
 <script src="scripts/slider.js" async></script>
-<script src="scripts/contact-form.js" async></script>
   </body>
   <footer><span>All Images from <a href="https://www.unsplash.com" target="blank">Unsplash</a> </span></footer>
 </html>
