added shrink on scroll

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         src="img/rad.png"
         alt="A bicycle, because i like to ride it."
       /> -->
-     <div class="hero__img-wrapper">
-       <img src="img/illu/iPad_png.png" alt="" class="img-wrapper__left-img"></img>
-       <img src="img/illu/Laptop_png.png" alt="" class="img-wrapper__right-img">
-     </div>
+          <div class="hero__img-wrapper">
+      <img src="img/illu/iPad_png.png" alt="" class="hero-img img-wrapper__left-img" ></img>
+      <img src="img/illu/Laptop_png.png" alt="" class="hero-img img-wrapper__right-img">
+    </div>
       <div class="hero__text-wrapper">
         <span class="text-wrapper__name">Marvin Fretter</span>
         <h1 class="text-wrapper__heading">Design & <br />Development</h1>
@@ -43,8 +43,8 @@
         alt="A floating coffe bean because i like coffe a lot."
       />
     </header>
+
     <main>
-      
       <section class="about-section">
         <h2 class="about-section__heading">About Me</h2>
         <p class="about-section__paragraph">
@@ -217,6 +217,7 @@
       </div>
     </section> 
     </main>
+    
 <!-- The Modal -->
 <div class="modal">
 
@@ -230,6 +231,7 @@
 
 </div>
 
+<script src="scripts/parallax.js"></script>
 <script src="scripts/modal.js" async></script>
 <script src="scripts/slider.js" async></script>
   </body>
