--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
   </div> -->
 </div>
 
+<script src="scripts/fileFetcher.js"></script>
 <script src="scripts/parallax.js"></script>
 <script src="scripts/modal.js" async></script>
 <script src="scripts/slider.js" async></script>
