--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <img class="showcase-content__img"
                 src="img/shopme-3screens.jpg"
                 alt="An image of a mockup showing 3 screens of a mobile app that i have developed. It is called shopme."
-                onclick="openModal('shopme',this)"
+                onclick="openModal('Shopme')"
                 loading="lazy"
               >
               </div>
@@ -143,14 +143,14 @@
               <img class="showcase-content__img"
                 src="img/wap-cropped.png"
                 alt="An image of a mockup showing a phone with an apped opened on a table."
-                onclick="openModal('wap', this)"
+                onclick="openModal('Wap')"
               >
               </div>
               <div class="main-content__slide fade" >
                 <img class="showcase-content__img"
                 src="img/deep-mock.png" 
                 alt="A mockup of some of the projects i have done. The mockups float above a ocean blue canvas in an angle of 45 degrees."
-                onclick="openModal('deep', this)"
+                onclick="openModal('Deep')"
                 >
               </div>
 
@@ -226,7 +226,7 @@
 
 <div class="modal" role="dialog" aria-labelledby="modal-content__" aria-describedby="modal-content__text">
   <div class="modal__grid">
-    <div class="modal-content__header">Shopme</div>
+    <div class="modal-content__header">test</div>
     <img class="modal-content__img" src="" alt="">
     <img class="modal-content__slides" src="img/brief.jpg" alt="" onclick="switchImg(this)">
     <div class="modal-content__close" onclick="closeModal()"><span class="modal-content__close-button">&times;</span></div>
