added fan phone function

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
           loading="lazy"
         />
         <div class="projects-section__phones translate-x-minus-50-px">
-        <img class="projects-section__phone rotate-clockwise-15-degree rotate-origin-bottom-left blur-3" src="img/Smartphone.png"  loading="lazy"></img>
-        <img class="projects-section__phone rotate-clockwise-30-degree rotate-origin-bottom-left blur-2" src="img/Smartphone.png"  loading="lazy"></img>
-        <img class="projects-section__phone rotate-clockwise-45-degree rotate-origin-bottom-left blur-1" src="img/Smartphone.png"  loading="lazy"></img>
-        <img class="projects-section__phone rotate-clockwise-60-degree rotate-origin-bottom-left " src="img/Smartphone.png"  loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left " src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
         </div>
         <h2 class="projects-section__heading">Projects</h2>
         <p class="projects-section__paragraph">
@@ -240,6 +240,7 @@
 </div>
 
 <script src="scripts/fileFetcher.js"></script>
+<script src="scripts/intersectionObserver.js" async></script>
 <script src="scripts/parallax.js"></script>
 <script src="scripts/modal.js" async></script>
 <script src="scripts/slider.js" async></script>
