--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       
 
       <div class="contact-form-wrapper">
-        <form class="contact-form" name="contact" method="POST" onsubmit="sendForm(event, this)" data-netlify="true">
+        <form id="contactForm" class="contact-form" name="contact" method="POST"  data-netlify="true">
       
           <label for="fname">First Name</label>
           <input class="contact-form__input" type="text" id="fname" name="firstname" placeholder="Your first name..">
