worked on modal. new animation beta

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet" defer
     />
     <link rel="stylesheet" href="styles/utilities.css" />
+    <!-- <link rel="stylesheet" href="styles/scrollbar.css" /> -->
     <link rel="stylesheet" href="styles/animations.css" />
     <link rel="stylesheet" href="styles/transformations-and-filters.css" />
     <link rel="stylesheet" href="styles/modal.css" async/>
@@ -128,25 +129,24 @@
             Sorry, your browser does not support inline SVG.
           </svg>
           <div class="project_section__showcase-content">
-            <h3 class="showcase-content__heading">shopme</h3>
+            
             <div class="showcase-content__main-content">
-             
-              <div class="main-content__slide fade" >
+              <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
-                src="img/shopme-3screens.jpg"
+                src="img/shopme-blue-bk.png"
                 alt="An image of a mockup showing 3 screens of a mobile app that i have developed. It is called shopme."
                 onclick="openModal('Shopme')"
                 loading="lazy"
               >
               </div>
-              <div class="main-content__slide fade" >
+              <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
                 src="img/wap-cropped.png"
                 alt="An image of a mockup showing a phone with an apped opened on a table."
                 onclick="openModal('Wap')"
               >
               </div>
-              <div class="main-content__slide fade" >
+              <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
                 <img class="showcase-content__img"
                 src="img/deep-mock.png" 
                 alt="A mockup of some of the projects i have done. The mockups float above a ocean blue canvas in an angle of 45 degrees."
