--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           obcaecati hic. Suscipit aliquid quia nihil animi. Placeat, eos!
         </p>
         <div class="projects_section__showcase">
-          <svg class="projects-section__arrow --left-arrow translate-x-minus-75-px" height="50" width="40" onclick="plusSlides(-1)">
+          <svg class="projects-section__arrow --left-arrow translate-x-minus-75-px" height="50" width="40" onclick="plusSlides(-1, 'left')">
             <line
               x1="30"
               y1="10"
@@ -157,13 +157,13 @@
           </div>
           <!-- The dots/circles -->
 <div class="dot-wrapper" >
-  <span class="dot-wrapper__dot" onclick="currentSlide(1)"></span>
-  <span class="dot-wrapper__dot" onclick="currentSlide(2)"></span>
-  <span class="dot-wrapper__dot" onclick="currentSlide(3)"></span>
+  <span class="dot-wrapper__dot" onclick="currentSlide(1, 'dot')"></span>
+  <span class="dot-wrapper__dot" onclick="currentSlide(2, 'dot')"></span>
+  <span class="dot-wrapper__dot" onclick="currentSlide(3, 'dot')"></span>
 </div>
 
           </div>
-          <svg class="projects-section__arrow --right-arrow translate-x-plus-75-px" height="50" width="40" onclick="plusSlides(1)">
+          <svg class="projects-section__arrow --right-arrow translate-x-plus-75-px" height="50" width="40" onclick="plusSlides(1, 'right')">
             <line
               x1="10"
               y1="10"
