new pictures forr the modal!

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
-                src="img/wap-cropped.png"
+                src="img/wap1.jpg"
                 alt="An image of a mockup showing a phone with an apped opened on a table."
                 onclick="openModal('Wap')"
               >
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
                 <img class="showcase-content__img"
-                src="img/deep-laptop.jpg" 
+                src="img/deep1.jpg" 
                 alt="A mockup of some of the projects i have done. The mockups float above a ocean blue canvas in an angle of 45 degrees."
                 onclick="openModal('Deep')"
                 >
