added mukta font

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;700;800&display=swap"
-      rel="stylesheet" defer
-    />
+    <meta name="Description" content="Hi, my name is Marvin Fretter and I'm a freelance web designer and developer from Germany. Feel free to contact me if you need someone to do your design and development.">
+
     <link rel="stylesheet" href="styles/utilities.css" />
     <!-- <link rel="stylesheet" href="styles/scrollbar.css" /> -->
     <link rel="stylesheet" href="styles/animations.css" />
@@ -20,17 +17,12 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/queries.css" />
 
-    <title>Marvin Fretter - Design and Development</title>
+    <title>Marvin Fretter - Freelance Design and Development</title>
   </head>
 
   <body>
 
     <header>
-      <!-- <img
-        class="bicycle translate-x-plus-50-px"
-        src="img/rad.png"
-        alt="A bicycle, because i like to ride it."
-      /> -->
           <div class="hero__img-wrapper">
       <img src="img/illu/iPad_png.png" alt="" class="img-wrapper__left-img" ></img>
       <img src="img/illu/Laptop_png2.png" alt="" class="img-wrapper__right-img">
@@ -47,7 +39,6 @@
     </header>
 
     <main>
-      <!-- <div class="head-row"></div> -->
       <section class="about-section">
         <h2 class="about-section__heading">About Me</h2>
         <p class="about-section__paragraph">
@@ -93,11 +84,11 @@
           alt="A Mockup of some of my projects."
           loading="lazy"
         />
-        <div class="projects-section__phones translate-x-minus-50-px">
-        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
-        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
-        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
-        <img class="projects-section__phone  rotate-origin-bottom-left " src="img/illu/Smartphone_gefüllt-w.png"  loading="lazy"></img>
+        <div class="projects-section__phones translate-x-minus-50-px" alt="A picture of a slightly rotated smartphone. The rotated smartphones in front of this one make it look like a fan.">
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
+        <img class="projects-section__phone  rotate-origin-bottom-left " src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones behind this one make it look like a fan." loading="lazy"></img>
         </div>
         <h2 class="projects-section__heading">Projects</h2>
         <p class="projects-section__paragraph">
