--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img
             class="about-section__img"
             src="img/portrait.jpg"
-            alt="A Picture of me. I'm smiling, of course"
+            alt="A portrait of me. I'm smiling, of course"
             loading="lazy"
           />
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
@@ -80,7 +80,7 @@
       <section class="projects-section">
         <img
           class="projects-section__header-img"
-          src="img/Mockup-collection.png"
+          src="img/Mockup-collection2.jpg"
           alt="A Mockup of some of my projects."
           loading="lazy"
         />
@@ -124,7 +124,7 @@
             <div class="showcase-content__main-content">
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
-                src="img/shopme-blue-bk.png"
+                src="img/shopme-blue-bk.jpg"
                 alt="An image of a mockup showing 3 screens of a mobile app that i have developed. It is called shopme."
                 onclick="openModal('Shopme')"
                 loading="lazy"
