--- a/index.html
+++ b/index.html
@@ -148,9 +148,12 @@
           </div>
           <!-- The dots/circles -->
           <div class="dot-wrapper" >
-            <span class="dot-wrapper__dot" onclick="currentSlide(1, 'dot')"></span>
-            <span class="dot-wrapper__dot" onclick="currentSlide(2, 'dot')"></span>
-            <span class="dot-wrapper__dot" onclick="currentSlide(3, 'dot')"></span>
+            <div class="dot-wrapper__wrapper" onclick="currentSlide(1, 'dot')">
+            <span class="dot-wrapper__dot" ></span></div>
+            <div class="dot-wrapper__wrapper"onclick="currentSlide(2, 'dot')">
+            <span class="dot-wrapper__dot" ></span></div>
+            <div class="dot-wrapper__wrapper"onclick="currentSlide(3, 'dot')">
+            <span class="dot-wrapper__dot" ></span></div>
           </div>
 
           </div>
