bit of responsoveness for the contact form

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           alt="A Mockup of some of my projects."
           loading="lazy"
         />
-        <div class="projects-section__phones translate-x-minus-50-px" alt="A picture of a slightly rotated smartphone. The rotated smartphones in front of this one make it look like a fan.">
+        <div class="projects-section__phones translate-x-minus-50-px">
         <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
         <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
         <img class="projects-section__phone  rotate-origin-bottom-left" src="img/illu/Smartphone_gefüllt-w.png"  alt="A picture of a slightly rotated smartphone. The rotated smartphones in front and behind this one make it look like a fan." loading="lazy"></img>
@@ -200,7 +200,7 @@
           <label for="company">Company</label>
           <input class="contact-form__input" type="text" id="company" name="company" placeholder="Your company..">
 
-          <label for="email">E-Mail Adress*</label>
+          <label for="email">E-Mail Address*</label>
           <input class="contact-form__input" type="text" id="email" name="email" placeholder="Your Email adress..">
 
           <label for="subject">Subject*</label>
