form send success message added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                 src="img/shopme-blue-bk.jpg"
                 alt="An image of a mockup showing 3 screens of a mobile app that i have developed. It is called shopme."
                 onclick="openModal('Shopme')"
-                loading="lazy"
               >
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
@@ -201,7 +200,7 @@
           <input class="contact-form__input" type="text" id="company" name="company" placeholder="Your company.. (optional)">
 
           <label for="email" class="contact-form__label" required aria-required="true"><span class="contact-form__asteriks">*</span> E-Mail Address</label>
-          <input class="contact-form__input" type="text" id="email" name="email" placeholder="Your Email adress..">
+          <input class="contact-form__input" type="email" id="email" name="email" placeholder="Your Email adress..">
 
           <label for="subject" class="contact-form__label" required aria-required="true"><span class="contact-form__asteriks">*</span> Subject</label>
           <input class="contact-form__input" type="text" id="subject" name="subject" placeholder="What's the matter?">
